gitops/sock-shop/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservice-app
  labels:
    app: sock-shop
    argocd.argoproj.io/managed-by: openshift-gitops
