gitops/sock-shop/carts.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts
  namespace: microservice-app
  labels:
    name: carts
    app: sock-shop
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: carts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  namespace: microservice-app
  labels:
    name: carts
    app: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: carts
  template:
    metadata:
      labels:
        name: carts
        app: sock-shop
    spec:
      containers:
      - name: carts
        image: weaveworksdemos/carts:0.4.8
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: carts-db
  namespace: microservice-app
  labels:
    name: carts-db
    app: sock-shop
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    name: carts-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts-db
  namespace: microservice-app
  labels:
    name: carts-db
    app: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: carts-db
  template:
    metadata:
      labels:
        name: carts-db
        app: sock-shop
    spec:
      containers:
      - name: carts-db
        image: mysql:5.7
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 256Mi
