gitops/sock-shop/front-end.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
  namespace: microservice-app
  labels:
    name: front-end
    app: sock-shop
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8079
    name: http
  selector:
    name: front-end
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: microservice-app
  labels:
    name: front-end
    app: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: front-end
  template:
    metadata:
      labels:
        name: front-end
        app: sock-shop
    spec:
      containers:
      - name: front-end
        image: weaveworksdemos/front-end:0.3.12
        ports:
        - containerPort: 8079
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 512Mi
