gitops/sock-shop/orders.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: microservice-app
  labels:
    name: orders
    app: sock-shop
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: orders
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: microservice-app
  labels:
    name: orders
    app: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: orders
  template:
    metadata:
      labels:
        name: orders
        app: sock-shop
    spec:
      containers:
      - name: orders
        image: weaveworksdemos/orders:0.4.7
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  namespace: microservice-app
  labels:
    name: orders-db
    app: sock-shop
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    name: orders-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-db
  namespace: microservice-app
  labels:
    name: orders-db
    app: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: orders-db
  template:
    metadata:
      labels:
        name: orders-db
        app: sock-shop
    spec:
      containers:
      - name: orders-db
        image: mysql:5.7
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 256Mi
