gitops/sock-shop/payment.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: microservice-app
  labels:
    name: payment
    app: sock-shop
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: payment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: microservice-app
  labels:
    name: payment
    app: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: payment
  template:
    metadata:
      labels:
        name: payment
        app: sock-shop
    spec:
      containers:
      - name: payment
        image: weaveworksdemos/payment:0.4.3
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 256Mi
