gitops/sock-shop/queue-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue-master
  namespace: microservice-app
  labels:
    name: queue-master
    app: sock-shop
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: queue-master
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-master
  namespace: microservice-app
  labels:
    name: queue-master
    app: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: queue-master
  template:
    metadata:
      labels:
        name: queue-master
        app: sock-shop
    spec:
      containers:
      - name: queue-master
        image: weaveworksdemos/queue-master:0.3.1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
