gitops/sock-shop/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: microservice-app
  labels:
    name: rabbitmq
    app: sock-shop
spec:
  ports:
  - port: 5672
    targetPort: 5672
    name: amqp
  - port: 15672
    targetPort: 15672
    name: management
  selector:
    name: rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: microservice-app
  labels:
    name: rabbitmq
    app: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: rabbitmq
  template:
    metadata:
      labels:
        name: rabbitmq
        app: sock-shop
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.11-alpine
        ports:
        - containerPort: 5672
        - containerPort: 15672
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 512Mi
