gitops/sock-shop/user.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: microservice-app
  labels:
    name: user
    app: sock-shop
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: microservice-app
  labels:
    name: user
    app: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: user
  template:
    metadata:
      labels:
        name: user
        app: sock-shop
    spec:
      containers:
      - name: user
        image: weaveworksdemos/user:0.4.4
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: user-db
  namespace: microservice-app
  labels:
    name: user-db
    app: sock-shop
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    name: user-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
  namespace: microservice-app
  labels:
    name: user-db
    app: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: user-db
  template:
    metadata:
      labels:
        name: user-db
        app: sock-shop
    spec:
      containers:
      - name: user-db
        image: weaveworksdemos/user-db:0.4.0
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 512Mi
