gitops/sock-shop/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: front-end
  namespace: microservice-app
  labels:
    name: front-end
    app: sock-shop
spec:
  to:
    kind: Service
    name: front-end
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
